增加node koa2进行本地虚拟开发

--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,5 @@ yarn-error.log*
 *.sw?
 ./dist
 ./node_modules
-./dist
-<<<<<<< Updated upstream
+./package-lock.json
 /package-lock.json
-=======
-package-lock.json
->>>>>>> Stashed changes
