--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-# 开发环境的前缀  使用VUE_APP_URL = “接口url”  书写格式：VUE_APP_[自定义name]
+# 开发环境的前缀  书写格式：VUE_APP_[自定义name]
 NODE_ENV=development
-VUE_APP_SERVICE_URL = 'http://cs-myzx.myzx.cn'
+VUE_APP_SERVICE_URL = 'http://localhost:8080'
