--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "bdghms",
+    "name": "vue-ms",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -16,6 +16,11 @@
         "echarts": "^4.8.0",
         "element-ui": "^2.13.1",
         "file-saver": "^2.0.2",
+        "jsonwebtoken": "^8.5.1",
+        "koa-bodyparser": "^4.3.0",
+        "koa-json": "^2.0.2",
+        "koa-logger": "^3.2.1",
+        "koa-router": "^9.4.0",
         "nprogress": "^0.2.0",
         "vue": "^2.6.11",
         "vue-baidu-map": "^0.21.22",
@@ -35,7 +40,11 @@
         "eslint": "^6.7.2",
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-vue": "^6.2.2",
+        "koa": "^2.13.0",
+        "koa-jwt": "^4.0.0",
+        "koa-static": "^5.0.0",
         "node-sass": "^4.12.0",
+        "nodemon": "^2.0.4",
         "sass-loader": "^8.0.2",
         "script-loader": "^0.7.2",
         "vue-calendar-component": "^2.8.2",
