--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-vue": "^6.2.2",
         "koa": "^2.13.0",
+        "koa-body": "^4.2.0",
         "koa-jwt": "^4.0.0",
         "koa-static": "^5.0.0",
         "node-sass": "^4.12.0",
-        "nodemon": "^2.0.4",
+        "nodemon": "^2.0.6",
         "sass-loader": "^8.0.2",
         "script-loader": "^0.7.2",
         "vue-calendar-component": "^2.8.2",
