--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve --mode=development",
+        "nodemon": "nodemon app.js",
+        "start": "concurrently \"npm run serve\" \"npm run nodemon\"",
         "build": "vue-cli-service build --mode=production",
         "lint": "vue-cli-service lint"
     },
@@ -12,6 +14,7 @@
         "animejs": "^3.2.0",
         "axios": "^0.19.2",
         "co": "^4.6.0",
+        "concurrently": "^5.3.0",
         "core-js": "^3.6.4",
         "echarts": "^4.8.0",
         "element-ui": "^2.13.1",
