--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "koa-logger": "^3.2.1",
         "koa-router": "^9.4.0",
         "lodash": "^4.17.20",
+        "mysql": "^2.18.1",
         "nprogress": "^0.2.0",
         "pdfjs-dist": "^2.5.207",
         "vue": "^2.6.11",
